@@ -11,9 +11,7 @@ import com.yuanno.soulsawakening.abilities.elements.poison.*;
 import com.yuanno.soulsawakening.abilities.elements.shadow.*;
 import com.yuanno.soulsawakening.abilities.elements.thunder.*;
 import com.yuanno.soulsawakening.abilities.elements.water.*;
-import com.yuanno.soulsawakening.abilities.elements.wind.GaleForceAbility;
-import com.yuanno.soulsawakening.abilities.elements.wind.WhirldWindDanceAbility;
-import com.yuanno.soulsawakening.abilities.elements.wind.WindAttackAbility;
+import com.yuanno.soulsawakening.abilities.elements.wind.*;
 import com.yuanno.soulsawakening.abilities.hollow.*;
 import com.yuanno.soulsawakening.abilities.kido.bakudo.HainawaAbility;
 import com.yuanno.soulsawakening.abilities.kido.bakudo.SaiAbility;
@@ -52,7 +50,7 @@ public class ModAbilities {
     public static final Ability[] NORMAL_ZANPAKUTO = new Ability[] {NormalBuffAbility.INSTANCE};
     public static final Ability[] POISON_ZANPAKUTO = new Ability[] {PoisonAttackAbility.INSTANCE, VenomousCloudAbility.INSTANCE, AdrenalineCloudAbility.INSTANCE, PoisonStingAbility.INSTANCE, AntidoteAbility.INSTANCE};
     public static final Ability[] WATER_ZANPAKUTO = new Ability[] {AquaSlashAbility.INSTANCE, TidalWaveAbility.INSTANCE, WaterPrisonAbility.INSTANCE, WaterSurgeAbility.INSTANCE, WaterPressureAbility.INSTANCE};
-    public static final Ability[] WIND_ZANPAKUTO = new Ability[] {GaleForceAbility.INSTANCE, WhirldWindDanceAbility.INSTANCE, WindAttackAbility.INSTANCE};
+    public static final Ability[] WIND_ZANPAKUTO = new Ability[] {GaleForceAbility.INSTANCE, WhirldWindDanceAbility.INSTANCE, WindAttackAbility.INSTANCE, WindBladeAbility.INSTANCE, WindDodgeAbility.INSTANCE};
     public static final Ability[] HOLLOW = new Ability[] {SlashAbility.INSTANCE, BiteAbility.INSTANCE, CeroAbility.INSTANCE, HollowRegenerationAbility.INSTANCE, GargantaAbility.INSTANCE, VastoHollowAbility.INSTANCE};
     public static final Ability[] SHINIGAMI = new Ability[] {SoulSocietyKeyAbility.INSTANCE};
     public static final Ability[] HADO = new Ability[] {ShoAbility.INSTANCE, ByakuraiAbility.INSTANCE, ShakkahoAbility.INSTANCE, TsuzuriRaidenAbility.INSTANCE};
